[package]
name = "mockserver-wasm-request-example"
version = "0.1.0"
edition = "2021"
description = "Example MockServer WASM matcher using the richer ABI (method/path/headers), built on mockserver-wasm-sdk"

[lib]
crate-type = ["cdylib"]

[dependencies]
mockserver-wasm-sdk = { path = "../sdk-rust" }

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = true
